--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.3.10</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
